--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   line_icons: ^2.0.3
   google_fonts: ^4.0.1
   get: ^4.6.6
-
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +65,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
-    - assets/logo/
-    - assets/icons/
+    - lib/assets/images/
+    - lib/assets/logo/
+    - lib/assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
