--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_stripe: ^10.1.1
-  http: ^1.2.1
+  http: ^0.13.6
+  dialog_flowtter: ^0.3.3
   flutter_dotenv: ^5.1.0
 
 dev_dependencies:
@@ -62,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/dialog_flow_auth.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
