--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,9 +65,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - lib/assets/
     - lib/assets/images/
-    - lib/assets/logo/
     - lib/assets/icons/
+    - lib/assets/logo/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
